--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -4,13 +4,12 @@
 
 - clean: ['~']
 
-#- link:
-#    ~/.tmux.conf: tmux.conf
+- link:
 #    ~/.vim: vim
-#    ~/.vimrc: vimrc
+    ~/.zshrc: zshrc
+    ~/.gitconfig:
 
-- create:
-    - ~/testing123
+#- create:
 #    - ~/.vim/undo-history
 
 #- shell:
